ingress/cheese-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  namespace: default
spec:
  rules:
  - host: www.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: wiki.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: k8s.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: mirror.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: status.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: dev.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: hotstone.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http
  - host: wiki.hotstone.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence
          servicePort: http
  - host: jenkins.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxplus
          servicePort: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.shileizcc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: http
